# agentically

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
agentically/: __init__.py  _config.py  main.py
agentically/adapters/: __init__.py  base.py  claude.py  copilot.py  cursor.py  kiro.py
agentically/commands/: __init__.py  create.py  explore.py  use.py
agents/: README.md
agents/agent-system/: README.md
agents/agent-system/memory/: config.yaml
agents/agent-system/memory/in-progress/: README.md
agents/agent-system/prompts/: agentsystem-build.md  agentsystem-design.md  agentsystem-submit.md  agentsystem-test.md
agents/agent-system/skills/design/: SKILL.md
agents/example-agent/: README.md
agents/example-agent/prompts/: app-proposer.md
docs/: contributing.md  index.md
docs/api/: adapters.md  commands.md  main.md
docs/concepts/: platform-adapters.md  registry.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: create.md  explore.md
docs/reference/: acronyms.md  configuration.md  glossary.md
prompt-systems/: README.md
prompt-systems/mkdocs-documentation/: README.md
prompt-systems/mkdocs-documentation/memory/: config.yaml
prompt-systems/mkdocs-documentation/prompts/: mkdocs-documentation-analyze.prompt.md  mkdocs-documentation-build.prompt.md
prompt-systems/prompt-system/: README.md
prompt-systems/prompt-system/memory/: config.yaml
prompt-systems/prompt-system/prompts/: promptsystem-build.md  promptsystem-design.md  promptsystem-submit.md  promptsystem-test.md
(+9 files in other folders)
